Login page client side error checks

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,4 @@
-{{!--
-<script src="/public/js/login.js"></script> --}}
+
 
 {{#if error}}
 <p id="error" class="error">{{error}}</p>
@@ -21,6 +20,8 @@
     <input type="submit" id="submitButton" name="submitButton" value="Submit">
   </div>
 </form>
+
+<script src="/public/js/login.js"></script>
 
 <br><br>
 <a href="/register">Click here to register!</a>
