routes /register can now make users

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -27,6 +27,7 @@
   <label for="confirmPasswordInput">Confirm Password</label>
   <input type="password" id="confirmPasswordInput" name="confirmPasswordInput" placeholder="Confirm Password" required>
   <br><br>
+  {{!-- role and title must be modified by an admin. defaults for both will just be `User` --}}
 
   <input type="submit" id="submitButton" name="submitButton" value="Submit">
 
