--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,27 +1,33 @@
 <script src="/public/js/login.js"></script>
+<link href="/public/css/login.css" rel="stylesheet">
 
 
-{{#if error}}
-<p id="error" class="error">{{error}}</p>
-{{else}}
-<p id="error" class="error" hidden></p>
-{{/if}}
 
 
-<h1>{{title}}</h1>
+<div class="form-signin w-100 m-auto text-center">
+  <form action="/login" method="POST" class="login-form" id="login-form">
+    <img class="mb-4" src="/public/assets/tikit_logo_full.png" alt="Tikit" width="250" height="72">
+    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
 
-<form action="/login" method="POST" class="login-form" id="login-form">
-  <label for="emailAddressInput">Email Address</label>
-  <input type="email" id="emailAddressInput" name="emailAddressInput" placeholder="Email Address" required>
-  <br><br>
-  <label for="passwordInput">Password</label>
-  <input type="password" id="passwordInput" name="passwordInput" placeholder="Password" required>
-  <br><br>
+    {{#if error}}
+    <p id="error" class="error">{{error}}</p>
+    {{else}}
+    <p id="error" class="error" hidden></p>
+    {{/if}}
 
-  <input type="submit" id="submitButton" name="submitButton" value="Submit">
+    <div class="form-floating">
+      <input type="email" class="form-control" id="emailAddressInput" name="emailAddressInput"
+        placeholder="Email Address" required>
+      <label for="emailAddressInput">Email Address</label>
+    </div>
 
-</form>
+    <div class="form-floating">
+      <input type="password" class="form-control" id="passwordInput" name="passwordInput" placeholder="Password"
+        required>
+      <label for="passwordInput">Password</label>
+    </div>
+    <input type="submit" class="w-100 btn btn-lg btn-primary" id="submitButton" name="submitButton" value="Submit">
 
 
-<br><br>
-<a href="/register">Click here to register!</a>
+  </form>
+</div>
