Add register to login page

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -27,7 +27,7 @@
       <label for="passwordInput">Password</label>
     </div>
     <input type="submit" class="w-100 btn btn-lg btn-primary" id="submitButton" name="submitButton" value="Submit">
-
-
   </form>
+  <br>
+  <a class="btn btn-primary w-100 btn-lg" href="/register" role="button">Register</a>
 </div>
