--- a/views/allTicketsView.handlebars
+++ b/views/allTicketsView.handlebars
@@ -1,10 +1,16 @@
-<h1>Tickets</h1>
-<form action="/tickets" method="POST">
-  <label for="search">Search Tickets:</label>
-  <input type="text" id="search" name="search" value={{query}}>
-  <input type="submit" id="subBtn" value="Search">
+<a class="pageLink link-body-emphasis" href="/">Return to Homepage</a>
+<br>
+<h1 class="display-4 fw-normal searchPageHeader">Tickets</h1>
+<form class="form-inline searchForm" action="/tickets" method="POST">
+  <div class="col-auto form-group">
+      <input class="form-control" type="text" id="search" name="search" placeholder="Search Tickets" value={{query}}>
+      <label class="visually-hidden-focusable" for="search">Search Tickets:</label>
+  </div>
+  <input class="btn btn-primary searchBtn" type="submit" id="subBtn" value="Search">
 </form>
-<table>
+<br>
+<table class="table table-hover table-bordered">
+  <thead class="table-light">
     <tr>
         <th>Ticket Name</th>
         <th>Status</th>
@@ -12,14 +18,16 @@
         <th>Created</th>
         <th>Deadline</th>
     </tr>
+  </thead>
+  <tbody>
   {{#each tickets}}
-    <tr>
-        <td><a href= "/tickets/view/{{this._id}}">{{this.name}}</a></td>
+    <tr style="transform: rotate(0);">
+        <td><a href= "/tickets/view/{{this._id}}" class="stretched-link"></a>{{this.name}}</td>
         <td>{{this.status}}</td>
         <td>{{this.priority}}</td>
         <td>{{this.createdOn}}</td>
         <td>{{this.deadline}}</td>
     </tr>
   {{/each}}
+  </tbody>
 </table>
-<script src="/public/js/search.js"></script>
