--- a/views/allUsersView.handlebars
+++ b/views/allUsersView.handlebars
@@ -1,3 +1,5 @@
+<a class="pageLink link-body-emphasis" href="/">Return to Homepage</a>
+<br>
 <h1 class="display-4 fw-normal searchPageHeader">Users</h1>
 <form class="form-inline searchForm" action="/users" method="POST">
   <div class="col-auto form-group">
