Added basic bootstrap for additional pages

--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,2 +1,3 @@
+<a class="pageLink link-body-emphasis" href="/">Return to Homepage</a>
 <p>{{msg}}</p>
 <img src="/public/assets/404.gif" alt="404 page not found" />
