--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,17 @@
-<h1>Welcome to Tikit!</h1>
-<h2><a href="/users">View All Users</a></h2>
-<h2><a href="/tickets">View All Tickets</a></h2>
+<h1 class="display-4 fw-normal pageHeader">Welcome to Tikit!</h1>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-xl-4">
+        <a class="pageLink link-body-emphasis" href="/users">
+        <img id="userImage" class="float-start" src="http://cdn.onlinewebfonts.com/svg/img_38242.png" alt="User Silhoutte">
+        <h2 >View All Users</h2>
+        </a>
+    </div>
+    <div class="col-xl-4">
+        <a class="pageLink link-body-emphasis" href="/tickets">
+        <img id="ticketImage" class="float-start" src="http://cdn.onlinewebfonts.com/svg/img_560762.png" alt="Ticket Silhoutte">
+        <h2>View All Tickets</h2>
+        </a>
+    </div>
+  </div>
+</div>
