--- a/views/userEdit.handlebars
+++ b/views/userEdit.handlebars
@@ -1,4 +1,6 @@
-<h1>Edit {{name}}</h1>
+<a class="pageLink link-body-emphasis" href="/">Return to Homepage</a>
+<br>
+<h1 class="display-4 fw-normal pageHeader">Edit {{name}}</h1>
 
 <p>Current settings for {{name}}</p>
 <ul>
