--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -1,4 +1,4 @@
-.searchPageHeader {
+.pageHeader {
     padding-top: 1%;
     padding-bottom: 2%;
     text-align: center;
@@ -17,4 +17,39 @@
     padding-right: 2%;
     text-decoration: none;
     float: right;
+}
+
+.link-clean {
+    text-decoration: none;
+    color: black;
+}
+
+.pageLink-light {
+    color: white;
+    padding-right: 2%;
+    text-decoration: none;
+    float: right;
+}
+
+.info {
+    padding-left: 10px;
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+.description {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+#userImage {
+    width:50px;
+    margin: 5%;
+    height: auto;
+}
+
+#ticketImage {
+    width:80px;
+    margin: 5%;
+    height: auto;
 }
