--- a/views/allTicketsView.handlebars
+++ b/views/allTicketsView.handlebars
@@ -1,6 +1,6 @@
 <a class="pageLink link-body-emphasis" href="/">Return to Homepage</a>
 <br>
-<h1 class="display-4 fw-normal searchPageHeader">Tickets</h1>
+<h1 class="display-4 fw-normal pageHeader">Tickets</h1>
 <form class="form-inline searchForm" action="/tickets" method="POST">
   <div class="col-auto form-group">
       <input class="form-control" type="text" id="search" name="search" placeholder="Search Tickets" value={{query}}>
