Update edit user page title

--- a/views/userEdit.handlebars
+++ b/views/userEdit.handlebars
@@ -4,7 +4,7 @@
 <p>Current settings for {{name}}</p>
 <ul>
   <li>Role: {{role}}</li>
-  <li>Title: {{title}}</li>
+  <li>Title: {{jobTitle}}</li>
 </ul>
 
 <br>
