--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -1,3 +1,7 @@
+.main { 
+    margin: 20px;
+}
+
 .pageHeader {
     padding-top: 1%;
     padding-bottom: 2%;
@@ -52,4 +56,11 @@
     width:80px;
     margin: 5%;
     height: auto;
+}
+
+.home-logo { 
+    font-weight: bold;
+    color: purple !important; 
+    font-size: 1.6em !important;
+
 }
