add footer and navbar elements

--- a/views/allUsersView.handlebars
+++ b/views/allUsersView.handlebars
@@ -1,5 +1,5 @@
-<a class="pageLink link-body-emphasis" href="/">Return to Homepage</a>
-<br>
+
+<section> 
 <h1 class="display-4 fw-normal pageHeader">Users</h1>
 <form class="form-inline searchForm" action="/users" method="POST">
   <div class="col-auto form-group">
@@ -31,3 +31,4 @@
   {{/each}}
   </tbody>
 </table>
+</section>
