--- a/views/ticketView.handlebars
+++ b/views/ticketView.handlebars
@@ -1,5 +1,5 @@
-<a class="pageLink link-body-emphasis" href="/">Return to Homepage</a>
-<br>
+
+<section> 
 <h1 class="display-4 fw-normal pageHeader">{{name}}</h1>
 <p class="lead info">Status: {{status}}</p>
 <p class="lead info">Priority: {{priority}}</p>
@@ -25,3 +25,4 @@
 <div class="bg-light">
   <p class="lead description info">{{description}}</p>
 </div>
+</section>
