--- a/views/userEdit.handlebars
+++ b/views/userEdit.handlebars
@@ -1,5 +1,4 @@
-<a class="pageLink link-body-emphasis" href="/">Return to Homepage</a>
-<br>
+<section>
 <h1 class="display-4 fw-normal pageHeader">Edit {{name}}</h1>
 
 <p>Current settings for {{name}}</p>
@@ -28,3 +27,4 @@
 
   <input type="submit" id="submitButton" name="submitButton" value="Submit">
 </form>
+</section>
