--- a/views/allTicketsView.handlebars
+++ b/views/allTicketsView.handlebars
@@ -1,5 +1,5 @@
-<a class="pageLink link-body-emphasis" href="/">Return to Homepage</a>
-<br>
+
+<section> 
 <h1 class="display-4 fw-normal pageHeader">Tickets</h1>
 <form class="form-inline searchForm" action="/tickets" method="POST">
   <div class="col-auto form-group">
@@ -31,3 +31,4 @@
   {{/each}}
   </tbody>
 </table>
+</section> 
