--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,4 @@
+<section>
 <h1 class="display-4 fw-normal pageHeader">Welcome to Tikit!</h1>
 <div class="container">
   <div class="row justify-content-center">
@@ -15,3 +16,4 @@
     </div>
   </div>
 </div>
+</section>
