Add functionality to navbar search

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,8 +40,8 @@
                     style="vertical-align: -6px;">logout</i></a>
               </li>
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search for tickets" aria-label="Search">
+            <form class="d-flex" role="search" action="/tickets" method="POST">
+              <input class="form-control me-2" type="search" id="search" name="search" placeholder="Search for tickets" aria-label="Search">
               <button class="btn btn-primary" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16"
                   height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                   <path
