--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,17 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+
+  {{!-- From https://realfavicongenerator.net/ --}}
+  <link rel="apple-touch-icon" sizes="180x180" href="/public/assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/public/assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/public/assets/favicon-16x16.png">
+  <link rel="manifest" href="/public/assets/site.webmanifest">
+  <link rel="mask-icon" href="/public/assets/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="/public/assets/favicon.ico">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-config" content="/public/assets/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -41,7 +52,8 @@
               </li>
             </ul>
             <form class="d-flex" role="search" action="/tickets" method="POST">
-              <input class="form-control me-2" type="search" id="search" name="search" placeholder="Search for tickets" aria-label="Search">
+              <input class="form-control me-2" type="search" id="search" name="search" placeholder="Search for tickets"
+                aria-label="Search">
               <button class="btn btn-primary" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16"
                   height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                   <path
