--- a/views/ticketView.handlebars
+++ b/views/ticketView.handlebars
@@ -1,28 +1,48 @@
-
-<section> 
-<h1 class="display-4 fw-normal pageHeader">{{name}}</h1>
-<p class="lead info">Status: {{status}}</p>
-<p class="lead info">Priority: {{priority}}</p>
-<p class="lead info">Category: {{category}}</p>
-<div>
-  <p class="lead info ">Customer:
-  <a class="badge link-clean text-bg-primary rounded-pill" href= "/users/view/{{customer._id}}">{{customer.firstName}} {{customer.lastName}}</a></p>
-</div>
-<p class="lead info">Owners:</p>
-<ul>
-  {{#each owner}}
-    <li class="badge text-bg-primary rounded-pill"><a  class="pageLink-light" href= "/users/view/{{this._id}}">{{this.firstName}} {{this.lastName}}</a></li>
-  {{/each}}
-</ul>
-<p class="lead info">Created: {{created}}</p>
-<p class="lead info">Deadline: {{deadline}}</p>
-<p class="lead info">Tags:</p>
-<ul>
-  {{#each tag}}
+<section>
+  <h1 class="display-4 fw-normal pageHeader">{{name}}</h1>
+  <p class="lead info">Status: {{status}}</p>
+  <p class="lead info">Priority: {{priority}}</p>
+  <p class="lead info">Category: {{category}}</p>
+  <div>
+    <p class="lead info ">Customer:
+      <a class="badge link-clean text-bg-primary rounded-pill"
+        href="/users/view/{{customer._id}}">{{customer.firstName}} {{customer.lastName}}</a>
+    </p>
+  </div>
+  <p class="lead info">Owners:</p>
+  <ul>
+    {{#each owner}}
+    <li class="badge text-bg-primary rounded-pill"><a class="pageLink-light"
+        href="/users/view/{{this._id}}">{{this.firstName}} {{this.lastName}}</a></li>
+    {{/each}}
+  </ul>
+  <p class="lead info">Created: {{created}}</p>
+  <p class="lead info">Deadline: {{deadline}}</p>
+  <p class="lead info">Tags:</p>
+  <ul>
+    {{#each tag}}
     <li class="badge text-bg-primary rounded-pill">{{this}}</li>
-  {{/each}}
-</ul>
-<div class="bg-light">
-  <p class="lead description info">{{description}}</p>
-</div>
+    {{/each}}
+  </ul>
+  <div class="bg-light">
+    <p class="lead description info">{{description}}</p>
+  </div>
+  <div>
+    <div class="add-comment"> 
+      <a href="/comments/{{ticketId}}"><button type="button" class="btn btn-secondary">Add Comment</button></a>
+    </div>
+    <p> 
+    {{#each comments}}
+    <ol class="list-group">
+      <li class="list-group-item d-flex justify-content-between align-items-start">
+        <div class="ms-2 me-auto">
+          <div class="fw-bold">Author: {{this.createdBy}}</div>
+          {{this.content}}
+        </div>
+        <span class="badge bg-primary rounded-pill">14</span>
+      </li>
+    </ol>
+    {{/each}}
+  </div>
+
 </section>
