restructure comments and replies, continue work on view

--- a/views/400.handlebars
+++ b/views/400.handlebars
@@ -1,5 +1,5 @@
-<section>
+<section> 
 <a class="pageLink link-body-emphasis" href="/">Return to Homepage</a>
 <p>{{msg}}</p>
-<img src="/public/assets/404.gif" alt="404 page not found" />
+<img src="/public/assets/404.gif" alt="400 Bad Request" />
 </section>
