create ticket interface done

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -47,6 +47,9 @@
                 <a class="nav-link">View Profile</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="/tickets/makeTicket">Create Ticket</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="/logout">Logout<i class="material-symbols-outlined"
                     style="vertical-align: -6px;">logout</i></a>
               </li>
