add category description popup in make ticket

--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -80,3 +80,38 @@ section {
     background-color: #4d004d !important;
     border-color: #4d004d !important;
 }
+
+
+.extra-info {
+    display: none;
+    line-height: 20px;
+    font-size: 12px;
+    top: 0;
+    left: 50px;
+}
+  
+.infoCategory:hover .extra-info {
+display: inline-block;;
+}
+
+.infoCategory {
+font-size: 20px;
+padding-left: 5px;
+border-radius: 15px;
+}
+
+.infoCategory:hover {
+background-color: white;
+padding: 0 0 0 5px;
+
+text-align: left !important;
+}
+
+.infoSubtitle {
+    font-weight: bold;
+    display:inline-block; 
+}
+
+.categoryDescription {
+    display:inline-block; 
+}
