--- a/views/makeTicket.handlebars
+++ b/views/makeTicket.handlebars
@@ -1,12 +1,12 @@
 
 <section> 
-<h1 class="display-4 fw-normal pageHeader">Create a Ticket</h1>
+<h1 class="display-4 fw-normal pageHeader">Create Ticket</h1>
 {{#if error}}
     <p id="error" class="error">{{error}}</p>
 {{else}}
     <p id="error" class="error" hidden></p>
 {{/if}}
-<form action="/makeTicket" method="POST" class="form-inline makeTicketForm" action="/tickets" method="POST">
+<form action="/tickets/makeTicket" method="POST" class="form-inline makeTicketForm" action="/tickets" method="POST">
   <div class="col-auto makeTicketForm-group">
         <label class="" for="ticketName">Ticket Name</label>
         <input class="form-control" type="text" id="ticketName" name="ticketName" placeholder="Ticket Name"> <br>
@@ -15,9 +15,27 @@
         <input class="form-control" type="text" id="ticketDescription" name="ticketDescription" placeholder="Ticket Description"> <br>
 
          <label class="" for="ticketCategory">Category</label>
+      <div class="col-md-12"></div>
+          <div class="infoCategory">
+            <i class="icon-info-sign"></i>
+            <span class="extra-info">
+            <p class="infoSubtitle">Service Request:</p><p class="categoryDescription">Inquire about product or service. These tickets are usually low-risk and do not require immediate action (ex: request new hardware or software, want to reset their password, or renew their software licenses)</p>
+            <br>
+            <p class="infoSubtitle">Incident:</p> Point out a problem with product or service (ex: disruption to IT service)
+            <br>
+            <p class="infoSubtitle">Problem:</p> For technical staff - problem that may cause an incident for a customer
+            <br>
+            <p class="infoSubtitle">Change Request:</p> Make changes to product or service (ex: permission changes)
+            <br>
+            </span>
+          </div>
+        </div>
+
          <select class="form-control"  id="ticketCategory" name="ticketCategory">    
-                    <option value="admin">Admin</option>
-                    <option value="user">User</option>
+                    <option value="Service Request">Service Request</option>
+                    <option value="Incident">Incident</option>
+                    <option value="Problem">Problem</option>
+                    <option value="Change Request">Change Request</option>
         </select><br>
 
         <label class="" for="ticketDeadline">Deadline</label>
@@ -25,10 +43,10 @@
 
         <label class="" for="ticketPriority">Priority</label>
          <select class="form-control"  id="ticketPriority" name="ticketPriority">    
-                    <option value="critical">Critical</option>
-                    <option value="high">High</option>
-                    <option value="normal">Normal</option>
-                    <option value="low">Low</option>
+                    <option value="Critical">Critical</option>
+                    <option value="High">High</option>
+                    <option value="Normal">Normal</option>
+                    <option value="Low">Low</option>
         </select><br><br>
   </div>
   <input class="btn btn-primary searchBtn" type="submit" id="subBtn" value="Submit">
