client side validation for makeTicket

--- a/views/makeTicket.handlebars
+++ b/views/makeTicket.handlebars
@@ -1,4 +1,3 @@
-
 <section> 
 <h1 class="display-4 fw-normal pageHeader">Create Ticket</h1>
 {{#if error}}
@@ -51,5 +50,6 @@
   </div>
   <input class="btn btn-primary searchBtn" type="submit" id="subBtn" value="Submit">
 </form>
+<script src="/public/js/mainTicket.js"></script>
 <br>
 </section> 
