ticket edit interface done (functionality not done)

--- a/views/makeTicket.handlebars
+++ b/views/makeTicket.handlebars
@@ -5,7 +5,7 @@
 {{else}}
     <p id="error" class="error" hidden></p>
 {{/if}}
-<form action="/tickets/makeTicket" method="POST" class="form-inline makeTicketForm" action="/tickets" method="POST">
+<form action="/tickets/makeTicket" method="POST" class="form-inline makeTicketForm">
   <div class="col-auto makeTicketForm-group">
         <label class="" for="ticketName">Ticket Name</label>
         <input class="form-control" type="text" id="ticketName" name="ticketName" placeholder="Ticket Name"> <br>
