--- a/views/commentView.handlebars
+++ b/views/commentView.handlebars
@@ -1,3 +1,12 @@
-<section> 
-<h1 class="h3 mb-3 font-weight-normal">Comment</h1>
+<section>
+    <h1 class="h3 mb-3 font-weight-normal">Add Comment to this Ticket</h1>
+
+
+    <form method="POST" action="/comments/{{ticketId}}" class="comment-form" id="comment-form"> 
+        <div class="mb-3">
+            <label for="contentInput" class="form-label">Comment:</label>
+            <textarea id="contentInput" type="text" name="contentInput" placeholder="Enter your comment" class="form-control" rows="3"></textarea>
+        </div>
+        <button type="submit" value="submit" class="btn btn-primary">Submit</button>
+    </form>
 </section>
