--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -14,6 +14,12 @@
         <h2>View All Tickets</h2>
         </a>
     </div>
+    <div class="col-xl-4">
+        <a class="pageLink link-body-emphasis" href="/tickets/calendar">
+        <img id="ticketImage" class="float-start" src="https://www.shareicon.net/data/2015/11/08/668650_calendar_512x512.png" alt="Calendar Silhoutte">
+        <h2>View Ticket Calendar</h2>
+        </a>
+    </div>
   </div>
 </div>
 </section>
