Adjustments for valid HTML and tota11y compliance

--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -24,8 +24,8 @@ section {
 }
 
 .link-clean {
-    text-decoration: none;
-    color: black;
+    text-decoration: inherit;
+    color: inherit;
 }
 
 .pageLink-light {
