--- a/views/allTicketsView.handlebars
+++ b/views/allTicketsView.handlebars
@@ -3,8 +3,8 @@
 <h1 class="display-4 fw-normal pageHeader">Tickets</h1>
 <form class="form-inline searchForm" action="/tickets" method="POST">
   <div class="col-auto form-group">
-      <input class="form-control" type="text" id="search" name="search" placeholder="Search Tickets" value={{query}}>
-      <label class="visually-hidden-focusable" for="search">Search Tickets:</label>
+      <input class="form-control" type="text" id="searchTickets" name="searchTickets" placeholder="Search Tickets" value={{query}}>
+      <label class="visually-hidden-focusable" for="searchTickets">Search Tickets:</label>
   </div>
   <input class="btn btn-primary searchBtn" type="submit" id="subBtn" value="Search">
 </form>
@@ -22,7 +22,7 @@
   <tbody>
   {{#each tickets}}
     <tr style="transform: rotate(0);">
-        <td><a href= "/tickets/view/{{this._id}}" class="stretched-link"></a>{{this.name}}</td>
+        <td><a href= "/tickets/view/{{this._id}}" class="stretched-link link-clean">{{this.name}}</a></td>
         <td>{{this.status}}</td>
         <td>{{this.priority}}</td>
         <td>{{this.createdOn}}</td>
