--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -54,7 +54,10 @@
             <form class="d-flex" role="search" action="/tickets" method="POST">
               <input class="form-control me-2" type="search" id="search" name="search" placeholder="Search for tickets"
                 aria-label="Search">
-              <button class="btn btn-primary" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+                <label hidden for="submitBtn">
+                  Submit Ticket Search
+                </label>
+              <button id="submitBtn" class="btn btn-primary" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16"
                   height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                   <path
                     d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
