complete delete and reply

--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -119,7 +119,7 @@ section {
     padding: 5px;
 }
 
-.deleteCommentBtn {
+.deleteCommentBtn, .replyCommentBtn, .deleteReplyBtn {
     background: none!important;
     border: none;
     padding: 0!important;
