--- a/views/userEdit.handlebars
+++ b/views/userEdit.handlebars
@@ -1,31 +1,49 @@
-<section>
-<h1 class="display-4 fw-normal pageHeader">Edit {{name}}</h1>
+<script src="/public/js/userEdit.js"></script>
 
-<p>Current settings for {{name}}</p>
-<ul>
-  <li>Role: {{role}}</li>
-  <li>Title: {{jobTitle}}</li>
-</ul>
+<section class="form-group w-100 m-auto text-center">
+  <h1 class="display-4 fw-normal pageHeader">Edit {{name}}</h1>
 
-<br>
+  <p>Current settings for {{name}}</p>
+  <p>Role: {{role}}</p>
+  <p>Title: {{jobTitle}}</p>
+  {{!-- does not look good centered
+  <ul>
+    <li>Role: {{role}}</li>
+    <li class="noBullets">Title: {{jobTitle}}</li>
+  </ul> --}}
 
-<p>New settings for {{name}}</p>
+  <br>
 
-<form action="/users/edit/{{id}}" method="POST" class="userEdit-form" id="userEdit-form">
-  <label for="roleInput">Role</label>
-  <select id="roleInput" name="roleInput" required>
-    <option value="">Choose Role</option>
-    <option value="admin">Admin</option>
-    <option value="user">User</option>
-  </select>
-  <br><br>
-  <label for="titleInput">Title</label>
-  <input type="text" id="titleInput" name="titleInput" placeholder="New Title" required>
-  <br><br>
-  {{!-- these 2 are passed along but not intended for the end user to see/edit --}}
-  <input type="hidden" id="userIDInput" name="userIDInput" value="{{id}}">
-  <input type="hidden" id="adminIDInput" name="adminIDInput" value="{{adminID}}">
+<div class="form-signin w-100 m-auto text-center">
+  <form action="/users/edit/{{id}}" method="POST" class="userEdit-form" id="userEdit-form">
+    <h2 class="h3 mb-3 font-weight-normal">New settings for {{name}}</h2>
 
-  <input type="submit" id="submitButton" name="submitButton" value="Submit">
-</form>
+    {{#if error}}
+    <p id="error" class="error">{{error}}</p>
+    {{else}}
+    <p id="error" class="error" hidden></p>
+    {{/if}}
+
+    <div class="row justify-content-center">
+      <label for="roleInput">Role</label>
+      <select id="roleInput" name="roleInput" class="form-select w-auto">
+        <option value="">Choose Role</option>
+        <option value="admin">Admin</option>
+        <option value="user">User</option>
+      </select>
+    </div>
+    <br><br>
+    <div class="row justify-content-center align-items-center text-center">
+      <label for="titleInput">Title</label>
+      <input type="text" class="form-control w-auto" id="titleInput" name="titleInput" placeholder="New Title" size="25"
+        required>
+    </div>
+    <br><br>
+    {{!-- these 2 are passed along but not intended for the end user to see/edit --}}
+    <input type="hidden" id="userIDInput" name="userIDInput" value="{{id}}">
+    <input type="hidden" id="adminIDInput" name="adminIDInput" value="{{adminID}}">
+
+    <input type="submit" id="submitButton" name="submitButton" value="Submit">
+  </form>
+  </div>
 </section>
