complete comment form

--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -126,3 +126,11 @@ section {
     text-decoration: underline;
     cursor: pointer;
   }
+
+  .commentHeader { 
+    color: black; 
+  }
+  .commentBorder { 
+    padding: 10px;
+    color: lightgray;
+  }
